crates/tests/src/snapshots/fe_compiler_tests__compile_errors__call_create2_with_wrong_type.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: function `create2` expects numeric parameters
  ┌─ fixtures/compile_errors/call_create2_with_wrong_type.fe:7:20
  │
7 │         Bar.create2(true, 1)
  │                    ^^^^^^^^^ invalid argument


